plugins {
    id 'org.jetbrains.kotlin.jvm' version '2.2.21'
    id 'application'
}

group = 'app.twitchdockdrops'
version = '0.1.0'

kotlin {
    jvmToolchain(21)
}

dependencies {
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0'
    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'app.twitchdockdrops.MainKt'
    applicationDefaultJvmArgs = ['--add-modules=jdk.httpserver']
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
    compilerOptions {
        freeCompilerArgs.add('-Xjsr305=strict')
    }
}
